tests/error/class_inside.gw
#! [contains] declared inside
class c {
  c var;
}
